[workspace]
members = [
  "common",
  "proto",
  "hubserv",
  "cluster",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/VerseEngine/verse-entrance-server"
authors = ["Appland, Inc"]

[workspace.dependencies]
anyhow = "1"
log = ">=0.4"
thiserror = "1"
chrono = "0.4"
cfg-if = "1.0.0"
js-sys = ">=0.3"
wasm-bindgen = ">=0.2"
wasm-bindgen-futures = ">=0.4"
wasm-bindgen-test = ">=0.3"
getrandom = { version = "0.2", features = ["js", "std"], default-features = false }
webrtc = "0.6"
x25519-dalek = "1"
ed25519-dalek = { version = "1", features = ["u64_backend"], default-features = false }
aes-gcm = { version = ">=0.10", features = ["default", "std"] }
async-rustls = ">=0.2"
rustls = ">=0.20"
rustls-acme = { version = "0.5", features = ["axum"] }
futures = { version = "0.3", default-features = false }
futures-util = "0.3"
async-trait = "0.1"
bytes = "1"
base64 = "0.13"
itertools = "0.10"
prost = ">=0.11"
prost-build = ">=0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = ">=0.4"
env_logger = ">=0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls", "blocking"], default-features = false }
once_cell = "1.16.0"
sha3 = "0.10.6"
parking_lot = "0.12"
aws-config = "0.51"
aws-sdk-ec2 = "0.21"
aws-sdk-s3 = "0.21"
aws-sdk-secretsmanager = "0.21"
aws-types = "0.51"
cloudflare = { git = "https://github.com/jcgruenhage/cloudflare-rs", branch = "make-owner-fields-optional", features = ["rustls-tls"], default-features = false }
verse-session-id = "1.0.0"

[profile.release]
lto = true
opt-level = "z"
