[package]
name = "verse-cluster"
version = "0.1.0"
edition.workspace = true
license = "MIT"
repository = "https://github.com/VerseEngine/verse-entrance-server"
description = "Metaverse client for P2P web"

[features]
default = []

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-ec2.workspace = true
aws-sdk-s3.workspace = true
aws-types.workspace = true
cfg-if.workspace = true
cloudflare.workspace = true
futures.workspace = true
hex = "0.4.3"
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
