[package]
name = "verse-common"
version = "0.1.0"
edition.workspace = true
license = "MIT"
repository = "https://github.com/VerseEngine/verse-entrance-server"
description = "Metaverse client for P2P web"

[features]
default = []

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
atomic_refcell = ">=0.1"
cfg-if.workspace = true
flate2 = "1.0"
futures.workspace = true
getrandom.workspace = true
log.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { version = ">=0.3", features = ['Window', 'Response', 'Request', 'RequestInit', 'RequestMode', 'Headers'] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio.workspace = true
reqwest.workspace = true
chrono.workspace = true
webrtc.workspace = true

[dev-dependencies]
logtest = "2"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio.workspace = true
